--- a/short_talk/safs_aul_talk.html
+++ b/short_talk/safs_aul_talk.html
@@ -1,26 +1,23 @@
----
-output:
-  xaringan::moon_reader:
-    chakra: libs/remark-latest.min.js
-    css: "my-theme.css"
-    lib_dir: libs
-    nature:
-      highlightStyle: github
-      highlightLines: true
----
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="my-theme.css" type="text/css" />
+  </head>
+  <body>
+    <textarea id="source">
 
-```{r setup, include=FALSE, message=FALSE}
-options(htmltools.dir.version = FALSE, servr.daemon = TRUE)
-library(huxtable)
-```
+
+
 
 class: center, middle, inverse
 
-# RESEARCH VISION, INTERESTS & APPROACH
+# RESEARCH VISION, INTERESTS &amp; APPROACH
 ## Mark Scheuerell
-_Northwest Fisheries Science Center<br>National Marine Fisheries Service<br>_
-<br>
-_School of Aquatic and Fishery Sciences<br>University of Washington<br>_
+_Northwest Fisheries Science Center&lt;br&gt;National Marine Fisheries Service&lt;br&gt;_
+&lt;br&gt;
+_School of Aquatic and Fishery Sciences&lt;br&gt;University of Washington&lt;br&gt;_
 
 ---
 
@@ -44,7 +41,7 @@ class: frimgB, center
 
 # I was trained as a field ecologist
 
-<img src="figs/Mark_at_Rainbow_Cr.jpg", alt="", height=440, width=440>
+&lt;img src="figs/Mark_at_Rainbow_Cr.jpg", alt="", height=440, width=440&gt;
 
 ---
 
@@ -63,9 +60,9 @@ class: frimgB, center
 ---
 
 class: middle, inverse
-# How do natural & human forces affect
+# How do natural &amp; human forces affect
 
-# .center[ the structure of aquatic ecosystems & ]
+# .center[ the structure of aquatic ecosystems &amp; ]
 
 # .right[ the services we derive from them? ]
 
@@ -133,7 +130,7 @@ class: middle, inverse
 
 class: middle
 
-> # We love to forecast, but we're not very good at it.
+&gt; # We love to forecast, but we're not very good at it.
 
 .right[
 ## - Nate Silver (2015)
@@ -235,35 +232,7 @@ class: center, middle, inverse
 
 ## Describes the .blue-text[true state of nature] over time or space
 
-```{r state_diag, dpi=300, fig.height=4, fig.width=8, out.height="100%", out.width="100%", fig.align='center', echo=FALSE, warning=FALSE}
-par(mai=c(0.8,0.8,0,0), omi=rep(0,4))
-## boundaries
-ss <- 5
-nn <- 7
-rr <- ss*3
-cc <- ss*nn
-## mid-points
-xm <- ss/2 + seq(0,cc-ss,ss)
-ymt <- rr - ss/2
-ymb <- ss/2
-## arrow locs
-x0t <- seq(ss, by=2*ss, len=3)
-x1t <- x0t + ss
-## empty plot space
-plot(c(0,cc), c(0,rr), type="n", xlab="", ylab="",
-     xaxt="n", yaxt="n", bty="n")
-## top row: state
-symbols(x=xm[c(1,3,5,7)], y=rep(ymt,4), circles=rep(ss/2,4),
-        lty="solid",  fg=NA, bg="#488fdf",
-        inches=FALSE, add=TRUE, lwd=3)
-text("Truth", x=-ss, y=ymt, adj=c(0,0.5), xpd=NA,
-     cex=2, col="#488fdf")
-arrows(x0=x0t,x1=x1t,y0=ymt, col="#488fdf", lwd=3, length=0.12)
-## Time or space
-arrows(x0=ss/2, x1=cc-ss/2, y0=-ss/3+ss*2,
-       length=0.12, lwd=3, xpd=NA)
-text("Time or space", x=cc/2, y=-ss/2+ss*2, xpd=NA, pos=1, cex=2)
-```
+&lt;img src="safs_aul_talk_files/figure-html/state_diag-1.png" width="100%" height="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -321,46 +290,15 @@ background-size: cover
 
 # Part 2: Observation model
 
-## .purple-text[Data] = .blue-text[Truth] &#177; .red-text[Errors]
+## .purple-text[Data] = .blue-text[Truth] &amp;#177; .red-text[Errors]
 
 ---
 
 # Part 2: Observation model
 
-## .purple-text[Data] = .blue-text[Truth] &#177; .red-text[Errors]
+## .purple-text[Data] = .blue-text[Truth] &amp;#177; .red-text[Errors]
 
-```{r obs_diag, dpi=300, fig.height=4, fig.width=8, out.height="100%", out.width="100%", fig.align='center', echo=FALSE, warning=FALSE}
-par(mai=c(0.8,0.8,0,0), omi=rep(0,4))
-## arrow locs
-x0t <- seq(ss, by=2*ss, len=3)
-x1t <- x0t + ss
-y0b <- rr - ss
-y1b <- ss
-## empty plot space
-plot(c(0,cc), c(0,rr), type="n", xlab="", ylab="",
-     xaxt="n", yaxt="n", bty="n")
-## top row: state
-symbols(x=xm[c(1,3,5,7)], y=rep(ymt,4), circles=rep(ss/2,4),
-        lty="solid",  fg=NA, bg="#488fdf",
-        inches=FALSE, add=TRUE, lwd=3)
-text("Truth", x=-ss, y=ymt, adj=c(0,0.5), xpd=NA,
-     cex=2, col="#488fdf")
-## arrows
-arrows(x0=x0t,x1=x1t,y0=ymt, col="#488fdf", lwd=3, length=0.12)
-## bottom row: obs
-symbols(x=xm[c(1,3,5,7)], y=rep(ss/2,4), circles=rep(ss/2,4),
-        lty="solid",  fg=NA, bg="#844870",
-        inches=FALSE, add=TRUE, lwd=3)
-text("Data", x=-ss, y=ss/2, adj=c(0,0.5), xpd=NA,
-     cex=2, col="#844870")
-## arrows
-arrows(x0=xm[c(1,3,5,7)], y0=y0b, y1=y1b,
-       col="#c10101", lwd=3, length=0.12)
-## Time or space
-arrows(x0=ss/2, x1=cc-ss/2, y0=-ss/3,
-       length=0.12, lwd=3, xpd=NA)
-text("Time or space", x=cc/2, y=-ss/2, xpd=NA, pos=1, cex=2)
-```
+&lt;img src="safs_aul_talk_files/figure-html/obs_diag-1.png" width="100%" height="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -377,9 +315,9 @@ class: inverse, center, middle
 .center.purple-text[
 ### Changes in observers or sensors
 
-### Varying survey locations & effort
+### Varying survey locations &amp; effort
 
-### Direct & remote sampling  
+### Direct &amp; remote sampling  
 ]
 
 ---
@@ -388,43 +326,7 @@ class: inverse, center, middle
 
 ## 2. .gray-text[Missing data] are easily accommodated
 
-```{r obs_NA, dpi=300, fig.height=4, fig.width=8, out.height="90%", out.width="90%", fig.align='center', echo=FALSE, warning=FALSE}
-par(mai=c(0.8,0.8,0,0), omi=rep(0,4))
-## arrow locs
-x0t <- seq(ss, by=2*ss, len=3)
-x1t <- x0t + ss
-y0b <- rr - ss
-y1b <- ss
-## empty plot space
-plot(c(0,cc), c(0,rr), type="n", xlab="", ylab="",
-     xaxt="n", yaxt="n", bty="n")
-## top row: state
-symbols(x=xm[c(1,3,5,7)], y=rep(ymt,4), circles=rep(ss/2,4),
-        lty="solid",  fg=NA, bg="#488fdf",
-        inches=FALSE, add=TRUE, lwd=3)
-text("Truth", x=-ss, y=ymt, adj=c(0,0.5), xpd=NA,
-     cex=2, col="#488fdf")
-## arrows
-arrows(x0=x0t,x1=x1t,y0=ymt, col="#488fdf", lwd=3, length=0.12)
-## bottom row: obs
-symbols(x=xm[c(1,3,7)], y=rep(ss/2,3), circles=rep(ss/2,3),
-        lty="solid",  fg=NA, bg="#844870",
-        inches=FALSE, add=TRUE, lwd=3)
-text("Data", x=-ss, y=ss/2, adj=c(0,0.5), xpd=NA,
-     cex=2, col="#844870")
-## NA's
-symbols(x=xm[5], y=ss/2, circles=ss/2,
-        lty="solid",  fg=NA, bg="#656565",
-        inches=FALSE, add=TRUE, lwd=3)
-text("NA", x=xm[5], y=ss/2, cex=1.8, col="#ffffff")
-## arrows
-arrows(x0=xm[c(1,3,7)], y0=y0b, y1=y1b,
-       col="#c10101", lwd=3, length=0.12)
-## Time or space
-arrows(x0=ss/2, x1=cc-ss/2, y0=-ss/3,
-       length=0.12, lwd=3, xpd=NA)
-text("Time or space", x=cc/2, y=-ss/2, xpd=NA, pos=1, cex=2)
-```
+&lt;img src="safs_aul_talk_files/figure-html/obs_NA-1.png" width="90%" height="90%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -435,7 +337,7 @@ background-size: 70%
 
 # Advantages of hierarchical models
 
-## 3. Improved accuracy & precision
+## 3. Improved accuracy &amp; precision
 
 ---
 
@@ -447,8 +349,8 @@ background-size: 70%
 ### This simple model can be used for 5+ unique applications
 ]
 
-$$\LARGE \mathbf{x}_t = \mathbf{B} \mathbf{x}_{t-1} + \mathbf{w}_t \\
-  \LARGE \mathbf{y}_t = \mathbf{Z} \mathbf{x}_t + \mathbf{v}_t$$
+`$$\LARGE \mathbf{x}_t = \mathbf{B} \mathbf{x}_{t-1} + \mathbf{w}_t \\
+  \LARGE \mathbf{y}_t = \mathbf{Z} \mathbf{x}_t + \mathbf{v}_t$$`
 
 ---
 
@@ -460,19 +362,19 @@ class: inverse, center, middle
 
 # Many software options
 
-## .green-text[**R** packages] (dlm, vars, MARSS<sup>*</sup>)
+## .green-text[**R** packages] (dlm, vars, MARSS&lt;sup&gt;*&lt;/sup&gt;)
 
 ## .blue-text[Code-your-own] (JAGS, Stan, greta)
 
 .footnoteSm.gray-text[
-<sup>\*</sup>Holmes, Ward, Scheuerell (2018) _Analysis of multivariate time-series using the MARSS package_
+&lt;sup&gt;\*&lt;/sup&gt;Holmes, Ward, Scheuerell (2018) _Analysis of multivariate time-series using the MARSS package_
 ]
 
 ---
 
-# Lots of teaching & outreach
+# Lots of teaching &amp; outreach
 
-## .green-text[Formal university courses]<sup>*</sup>
+## .green-text[Formal university courses]&lt;sup&gt;*&lt;/sup&gt;
 
 ## .blue-text[Workshops at national conferences]
 
@@ -481,7 +383,7 @@ class: inverse, center, middle
 ## .purple-text[One-on-one mentoring]
 
 .footnoteSm.gray-text[
-<sup>\*</sup>This quarter at UW: _Applied Time Series Analysis_ (FISH 507)
+&lt;sup&gt;\*&lt;/sup&gt;This quarter at UW: _Applied Time Series Analysis_ (FISH 507)
 ]
 
 ---
@@ -586,7 +488,7 @@ background-size: 130%
 ### Mean increase of 3.3% over ~25 years
 ]
 
-.citationT.gray-text[Scheuerell et al. (2015) *Ecol* & *Evol* &nbsp; 5:2115–2125]
+.citationT.gray-text[Scheuerell et al. (2015) *Ecol* &amp; *Evol* &amp;nbsp; 5:2115–2125]
 
 ---
 
@@ -601,7 +503,7 @@ background-size: 130%
 ### Probability of positive effect is ~70%
 ]
 
-.citationT.gray-text[Scheuerell et al. (2015) *Ecol* & *Evol* &nbsp; 5:2115–2125]
+.citationT.gray-text[Scheuerell et al. (2015) *Ecol* &amp; *Evol* &amp;nbsp; 5:2115–2125]
 
 ---
 
@@ -612,5 +514,40 @@ background-size: 85%
 
 ## Common year effects overshadow .orange-text[intervention]
 
-.citationT.gray-text[Scheuerell et al. (2015) *Ecol* & *Evol* &nbsp; 5:2115–2125]
+.citationT.gray-text[Scheuerell et al. (2015) *Ecol* &amp; *Evol* &amp;nbsp; 5:2115–2125]
+    </textarea>
+<script src="libs/remark-latest.min.js"></script>
+<script>var slideshow = remark.create({
+"highlightStyle": "github",
+"highlightLines": true
+});
+if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
+  window.dispatchEvent(new Event('resize'));
+});
+(function() {
+  var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+  if (!r) return;
+  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
+  d.head.appendChild(s);
+})();</script>
 
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {
+    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+  }
+});
+</script>
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+(function () {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src  = 'https://cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML';
+  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
+    script.src  = script.src.replace(/^https?:/, '');
+  document.getElementsByTagName('head')[0].appendChild(script);
+})();
+</script>
+  </body>
+</html>
